# recruitool

./: .env.sample  .gitignore  PLAN.md  README.md  app.py  namaskaram.json  pyproject.toml  requirements.txt
tests/: conftest.py  test_smoke.py
