[project]
name = "linkedin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.54.0",
    "langchain>=1.1.3",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.0.0",
    "linkedin-scraper>=2.11.5",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.1",
    "tabulate>=0.9.0",
    "webdriver-manager>=4.0.2",
]
