[project]
name = "linkedin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-google-genai>=4.0.0",
    "requests>=2.28",
    "streamlit>=1.52.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
